Logtalk/examples/errors/warnings_loader.lgt

:- initialization(
	logtalk_load(
		warnings,
		[unknown(warning), misspelt(warning), singletons(warning), plredef(warning), lgtredef(warning), portability(warning), report(on)])).
